# SFMLWindowsAndButtons

./: AnimationWindow.h  MainThread.cpp  MainWindowHeader.h  MainWindowSource.cpp  README.md  StructuresAndOtherFunctions.h  build_library.sh  build_library_and_exe.sh  run_executable.sh
executable_sources/: CMakeLists.txt
executable_sources/source/: MainThread.cpp
include/lib/: MainWindowHeader.hpp  StructuresAndOtherFunctions.hpp
lib_sources/: CMakeLists.txt
lib_sources/source/: MainWindowSource.cpp
